--- a/examples/tiles/index.html
+++ b/examples/tiles/index.html
@@ -21,7 +21,7 @@
       tileSize: 1;
       tileSegments: 10;
       pxToWorldRatio: 50;
-      wireframe: true;" 
+      wireframe: false;" 
       rotation="-90 0 0"
       position="0 -2 -1">
     </a-entity>
