--- a/examples/tiles/index.html
+++ b/examples/tiles/index.html
@@ -16,12 +16,12 @@
 
   <a-entity tiles="
       mapzenAPIKey: mapzen-sfnfVzq;
-      center: 15.347900390625002, 48.379634;
-      zoom: 12;
+      center: 15.347900390625002, 48.37974171694467;
+      zoom: 11;
       tileSize: 1;
       tileSegments: 10;
       pxToWorldRatio: 50;
-      wireframe: false;" 
+      wireframe: true;" 
       rotation="-90 0 0"
       position="0 -2 -1">
     </a-entity>
