--- a/examples/index.html
+++ b/examples/index.html
@@ -25,7 +25,7 @@
     <a href="basic/">Basic</a>
     <p>This is a basic terrain.</p>
     <a href="airborne/">Airborne Imaginery</a>
-    <p>This is a custom styled map using airborne imaginary.</p>
+    <p>This is a custom styled map using airborne imaginary. Takes a bit to load.</p>
     <a href="tiles/">Terrain Tiles</a>
     <p>Experimental.</p>
 
