--- a/examples/tiles/index.html
+++ b/examples/tiles/index.html
@@ -7,7 +7,7 @@
     <script src="./tiles.js"></script>
   </head>
   <body>
-    <a-scene>
+    <a-scene stats>
       <a-assets>
       </a-assets>
  
@@ -16,19 +16,22 @@
 
   <a-entity tiles="
       mapzenAPIKey: mapzen-sfnfVzq;
-      center: 15.347900390625002, 48.37974171694467;
+      center: 15, 48;
       zoom: 11;
-      tileSize: 2;
-      tileSegments: 10;
-      pxToWorldRatio: 50;
-      wireframe: true;" 
+      tileSize: 5;
+      tileSegments: 50;
+      pxToWorldRatio: 40;
+      wireframe: false;" 
       rotation="-90 0 0"
       position="0 -2 -1">
     </a-entity>
 
+    <a-entity id="player" position="0 0 0">
       <a-entity camera look-controls wasd-controls="fly: true;"></a-entity>
-
+    </a-entity>
     </a-scene>
       
+    <!-- center: 15.347900390625002, 48.37951368469732; -->
+    <!-- 48.37974171694467 -->
   </body>
 </html>
