--- a/examples/tiles/index.html
+++ b/examples/tiles/index.html
@@ -9,6 +9,7 @@
   <body>
     <a-scene stats>
       <a-assets>
+          <a-asset-item id="yaml-austria" src="assets/austria-satellite.yaml" />
       </a-assets>
  
   <a-sky color="#aaa"></a-sky>
@@ -16,14 +17,17 @@
 
   <a-entity tiles="
       mapzenAPIKey: mapzen-sfnfVzq;
-      center: 15, 48;
-      zoom: 11;
-      tileSize: 5;
-      tileSegments: 50;
-      pxToWorldRatio: 40;
-      wireframe: false;" 
+      style: #yaml-austria;
+      center: 12.6875, 47.188056;
+      zoom: 13;
+      tileSize: 20;
+      tileSegments: 40;
+      displacementScale: 20;
+      pxToWorldRatio: 60;
+      wireframe: false;
+      radius: 1;" 
       rotation="-90 0 0"
-      position="0 -2 -1">
+      position="0 -13 0">
     </a-entity>
 
     <a-entity id="player" position="0 0 0">
