--- a/examples/index.html
+++ b/examples/index.html
@@ -27,7 +27,7 @@
     <a href="airborne/">Airborne Imaginery</a>
     <p>This is a custom styled map using airborne imaginary. Takes a bit to load.</p>
     <a href="tiles/">Terrain Tiles</a>
-    <p>Experimental.</p>
+    <p>Fly over Austria's alps (Using a naive simple tile implementation that will blow your memory...).</p>
 
     <!-- GitHub Corner. -->
     <a href="https://github.com/mattrei/aframe-tangram-component" class="github-corner">
