--- a/examples/tiles/index.html
+++ b/examples/tiles/index.html
@@ -7,7 +7,7 @@
     <script src="./tiles.js"></script>
   </head>
   <body>
-    <a-scene stats>
+    <a-scene>
       <a-assets>
           <a-asset-item id="yaml-austria" src="assets/austria-satellite.yaml" />
       </a-assets>
@@ -27,7 +27,7 @@
       wireframe: false;
       radius: 1;" 
       rotation="-90 0 0"
-      position="0 -13 0">
+      position="0 -15 0">
     </a-entity>
 
     <a-entity id="player" position="0 0 0">
