ready to release

--- a/examples/basic/index.html
+++ b/examples/basic/index.html
@@ -34,17 +34,17 @@
     </a-tangram-terrain>
   -->
 
-    <a-entity id="terrain" visible="true" geometry="width: 25; height: 25; segmentsWidth: 50; segmentsHeight: 50;" material="wireframe: false; displacementScale: 30;"
+    <a-entity id="terrain" visible="true" geometry="width: 20; height: 20; segmentsWidth: 50; segmentsHeight: 50;" material="wireframe: false; displacementScale: 20; displacementBias: 0;"
       tangram-terrain="
   mapzenAPIKey: mapzen-sfnfVzq;
   style: #yamlElevation;
   center: 15.8056, 47.7671;
   zoom: 10;
   pxToWorldRatio: 12;
-  " rotation="-90 0 0" position="0 -10 -20">
+  " rotation="-90 0 0" position="0 -5 -10">
 
-  <a-sphere id="marker" color="#EF2D5E" position="0 0 0" visible="true" radius="0.2"></a-sphere>
-  <a-sphere id="marker2" color="#AF2D5E" position="0 0 0" visible="true" radius="0.2"></a-sphere>
+  <a-sphere id="marker" color="#EF2D5E" position="0 0 0" visible="true" radius="0.1"></a-sphere>
+  <a-sphere id="marker2" color="#AF2D5E" position="0 0 0" visible="true" radius="0.1"></a-sphere>
     </a-entity>
 
 
