--- a/examples/index.html
+++ b/examples/index.html
@@ -25,9 +25,9 @@
     <a href="basic/">Basic</a>
     <p>This is a basic terrain.</p>
     <a href="airborne/">Airborne Imaginery</a>
-    <p>This is a custom styled map using airborne imaginary. Takes a bit to load.</p>
+    <p>This is a custom styled map using airborne imaginary. Takes some seconds to load due to slow tile server.</p>
     <a href="tiles/">Terrain Tiles</a>
-    <p>Fly over Austria's alps (Using a naive simple tile implementation that will blow your memory...).</p>
+    <p>Fly over Austria's alps (Using a very simple tile implementation...).</p>
 
     <!-- GitHub Corner. -->
     <a href="https://github.com/mattrei/aframe-tangram-component" class="github-corner">
