--- a/examples/tiles/index.html
+++ b/examples/tiles/index.html
@@ -7,9 +7,9 @@
     <script src="./tiles.js"></script>
   </head>
   <body>
-    <a-scene>
+    <a-scene  fog="type: exponential; color: #AAA; density: 0.0025;">
       <a-assets>
-          <a-asset-item id="yaml-austria" src="assets/austria-satellite.yaml" />
+          <a-asset-item id="yaml-austria" src="assets/austria-airborne.yaml" />
       </a-assets>
  
   <a-sky color="#aaa"></a-sky>
