--- a/examples/airborne/index.html
+++ b/examples/airborne/index.html
@@ -8,14 +8,14 @@
   <body>
     <a-scene>
       <a-assets>
-        <a-asset-item id="yaml-austria" src="assets/austria-satellite.yaml" />
+        <a-asset-item id="yaml-austria" src="assets/austria-airborne.yaml" />
       </a-assets>
  
       <a-sky color="#6EBAA7"></a-sky>
  
       <a-entity id="terrain" visible="true"
       
-      geometry="width: 50; height: 50; segmentsWidth: 50; segmentsHeight: 50;"
+      geometry="width: 50; height: 50; segmentsWidth: 40; segmentsHeight: 40;"
       material="wireframe: false; displacementScale: 100;"
 
 
@@ -24,11 +24,11 @@
       style: #yaml-austria;
       center: 15.8056, 47.7671;
       zoom: 15;
-      pxToWorldRatio: 30;
+      pxToWorldRatio: 50;
       " 
 
       rotation="-90 0 0"
-      position="0 -30 0"
+      position="0 -25 -10"
       >
       </a-entity>
 
