correcting title of examples

--- a/examples/index.html
+++ b/examples/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
-    <title>A-Frame Tangram Component</title>
-    <meta name="description" content="A Tangram component for A-Frame."></meta>
+    <title>A-Frame Tangram Terrain Component</title>
+    <meta name="description" content="A Tangram Terrain component for A-Frame."></meta>
     <style>
       html {
         background: #33425B;
@@ -21,9 +21,9 @@
     </style>
   </head>
   <body>
-    <h1>A-Frame Tangram Component</h1>
+    <h1>A-Frame Tangram Terrain Component</h1>
     <a href="basic/">Basic</a>
-    <p>This is a basic terrain.</p>
+    <p>This is a basic elevation colored terrain.</p>
     <a href="airborne/">Airborne Imaginery</a>
     <p>This is a custom styled map using airborne imaginary. Takes some seconds to load due to slow tile server.</p>
     <a href="tiles/">Terrain Tiles</a>
