--- a/examples/basic/index.html
+++ b/examples/basic/index.html
@@ -6,6 +6,7 @@
 
   <script src="../build.js"></script>
   <script src="./collider-check.js"></script>
+  <script src="./height-matrix.js"></script>
 </head>
 
 <body>
@@ -35,17 +36,21 @@
     </a-tangram-terrain>
   -->
 
-    <a-entity id="terrain" visible="true" geometry="width: 40; height: 40; segmentsWidth: 50; segmentsHeight: 50;" material="wireframe: false; displacementScale: 20; displacementBias: 0;"
+    <a-entity id="terrain" visible="true" 
+    geometry="width: 40; height: 40; segmentsWidth: 100; segmentsHeight: 100;" 
+    material="side: double; wireframe: true; displacementScale: 30; displacementBias: 0;"
       tangram-terrain="
   mapzenAPIKey: mapzen-sfnfVzq;
   style: #yamlElevation;
   center: 15.8056, 47.7671;
   zoom: 10;
   pxToWorldRatio: 12;
-  " rotation="-90 0 0" position="0 -5 -10">
+  " rotation="-90 0 0" position="0 -5 0"
+  height-matrix>
 
-      <a-sphere id="marker" color="#EF2D5E" position="0 0 0" visible="true" radius="0.1"></a-sphere>
-      <a-sphere id="marker2" color="#AF2D5E" position="0 0 0" visible="true" radius="0.1"></a-sphere>
+      <a-sphere id="marker" color="red" position="0 0 0" visible="true" radius="0.1"></a-sphere>
+      <a-sphere id="marker2" color="red" position="0 0 0" visible="true" radius="0.1"></a-sphere>
+      <a-sphere id="marker3" color="red" position="0 0 0" visible="true" radius="0.1"></a-sphere>
     </a-entity>
 
 
@@ -62,10 +67,12 @@
   var mapEl = document.querySelector('#terrain');
   var markerEl = document.querySelector('#marker');
   var marker2El = document.querySelector('#marker2');
+  var marker3El = document.querySelector('#marker3');
   var setProperty = window.AFRAME.utils.entity.setComponentProperty;
-  mapEl.addEventListener('model-loaded', function () {
+  mapEl.addEventListener('terrain-loaded', function () {
     setProperty(markerEl, 'position', mapEl.components["tangram-terrain"].project(15.9, 47.8));
-    //setProperty(marker2El, 'position', mapEl.components["tangram-terrain"].project(15.8056, 47.7671));
+    setProperty(marker2El, 'position', mapEl.components["tangram-terrain"].project(15.8056, 47.7671));
+    setProperty(marker3El, 'position', mapEl.components["tangram-terrain"].project(15.6, 47.6));
   });
 </script>
 
