--- a/examples/index.html
+++ b/examples/index.html
@@ -23,11 +23,11 @@
   <body>
     <h1>A-Frame Tangram Terrain Component</h1>
     <a href="basic/">Basic</a>
-    <p>This is a basic elevation colored terrain.</p>
+    <p>This is a basic wireframe elevation colored terrain with height points.</p>
     <a href="airborne/">Airborne Imaginery</a>
     <p>This is a custom styled map using airborne imaginary. Takes some seconds to load due to slow tile server.</p>
     <a href="tiles/">Terrain Tiles</a>
-    <p>Fly over Austria's alps (Using a very simple tile implementation...).</p>
+    <p>Fly over Austria's alps (Using a very simple lazy-loading tile implementation...).</p>
 
     <!-- GitHub Corner. -->
     <a href="https://github.com/mattrei/aframe-tangram-terrain-component" class="github-corner">
