--- a/examples/index.html
+++ b/examples/index.html
@@ -28,6 +28,8 @@
     <p>This is a custom styled map using airborne imaginary. Takes some seconds to load due to slow tile server.</p>
     <a href="tiles/">Terrain Tiles</a>
     <p>Fly over Austria's alps (Using a very simple lazy-loading tile implementation...).</p>
+    <a href="tiles2/">Terrain Tiles - 2nd approach</a>
+    <p>Fly over Austria's alps (Using a very simple lazy-loading tile implementation...).</p>
 
     <!-- GitHub Corner. -->
     <a href="https://github.com/mattrei/aframe-tangram-terrain-component" class="github-corner">
