--- a/examples/panning/index.html
+++ b/examples/panning/index.html
@@ -28,10 +28,12 @@
         center: 86.92, 27.98;
         zoom: 15;
         pxToWorldRatio: 20;
+        dispose: false;
+        useBuffer: false;
         " 
         map-controls
         rotation="-90 0 0"
-        position="0 -18 0"
+        position="0 -28 0"
         >
         </a-entity>
         
