--- a/examples/airborne/index.html
+++ b/examples/airborne/index.html
@@ -16,7 +16,7 @@
  
       <a-entity id="terrain" visible="true"
       
-      geometry="width: 20; height: 20; segmentsWidth: 50; segmentsHeight: 50;"
+      geometry="primitive: plane; width: 20; height: 20; segmentsWidth: 50; segmentsHeight: 50;"
       material="wireframe: false; displacementScale: 10;"
 
 
