--- a/examples/panning/index.html
+++ b/examples/panning/index.html
@@ -18,7 +18,7 @@
    
         <a-entity id="terrain" visible="true"
         
-        geometry="width: 60; height: 60; segmentsWidth: 80; segmentsHeight: 80;"
+        geometry="primitive: plane; width: 60; height: 60; segmentsWidth: 80; segmentsHeight: 80;"
         material="wireframe: false; displacementScale: 25;"
   
   
