--- a/examples/tiles/index.html
+++ b/examples/tiles/index.html
@@ -7,7 +7,7 @@
     <script src="./tiles.js"></script>
   </head>
   <body>
-    <a-scene  fog="type: exponential; color: #AAA; density: 0.0025;">
+    <a-scene stats fog="type: exponential; color: #AAA; density: 0.09;">
       <a-assets>
           <a-asset-item id="yaml-austria" src="assets/austria-airborne.yaml" />
       </a-assets>
@@ -21,9 +21,9 @@
       center: 12.6875, 47.188056;
       zoom: 13;
       tileSize: 20;
-      tileSegments: 40;
-      displacementScale: 20;
-      pxToWorldRatio: 60;
+      tileSegments: 20;
+      displacementScale: 30;
+      pxToWorldRatio: 35;
       wireframe: false;
       radius: 1;" 
       rotation="-90 0 0"
