changeing tile server to aws

--- a/examples/basic/index.html
+++ b/examples/basic/index.html
@@ -32,6 +32,7 @@
   center: 15.8056, 47.7671;
   zoom: 10;
   pxToWorldRatio: 15;
+  depthBuffer: true;
   " rotation="-90 0 0" position="0 -5 0"
   sphere-matrix>
 
