ssetting high density display to false

--- a/examples/airborne/index.html
+++ b/examples/airborne/index.html
@@ -6,7 +6,7 @@
     <script src="../build.js"></script>
   </head>
   <body>
-    <a-scene>
+    <a-scene stats>
       <a-assets>
         <a-asset-item id="yaml-austria" src="assets/austria-airborne.yaml" />
         <a-asset-item id="yaml-esri" src="assets/esri-satellite.yaml" />
@@ -26,9 +26,10 @@
       zoom: 13;
       pxToWorldRatio: 60;
       " 
+      
 
       rotation="-90 0 0"
-      position="0 -25 -10"
+      position="0 -10 -10"
       >
       </a-entity>
 
