--- a/examples/basic/index.html
+++ b/examples/basic/index.html
@@ -27,6 +27,7 @@
     geometry="width: 40; height: 40; segmentsWidth: 50; segmentsHeight: 50; primitive: plane;" 
     material="side: double; wireframe: true; displacementScale: 30; displacementBias: 0;"
       tangram-terrain="
+      apiKey: UJcQwnnfQnWcPtKe2aYaEw;
   style: #yamlElevation;
   center: 15.8056, 47.7671;
   zoom: 10;
