--- a/examples/basic/index.html
+++ b/examples/basic/index.html
@@ -42,7 +42,7 @@
     </a-entity>
 
 
-      <a-entity camera="userHeight: 0" look-controls wasd-controls="fly: false;"></a-entity>
+      <a-entity camera look-controls wasd-controls="fly: false;"></a-entity>
 
   </a-scene>
 
