--- a/examples/index.html
+++ b/examples/index.html
@@ -25,7 +25,7 @@
     <a href="basic/">Basic</a>
     <p>This is a basic wireframe elevation colored terrain with height points.</p>
     <a href="airborne/">Airborne Imaginery</a>
-    <p>This is a custom styled map using airborne imaginary. Takes some seconds to load due to slow tile server.</p>
+    <p>This is a custom styled map using airborne imaginary. Uses dynamic Level-Of-Detail (LOD) depending on your distance to the terrain.</p>
     <a href="tiles/">Terrain Tiles</a>
     <p>Fly over Austria's alps (Using a very simple lazy-loading tile implementation...).</p>
 
