adding preload lod

--- a/examples/airborne/index.html
+++ b/examples/airborne/index.html
@@ -8,7 +8,7 @@
 
   </head>
   <body>
-    <a-scene>
+    <a-scene stats>
       <a-assets>
         <a-asset-item id="yaml-austria" src="assets/austria-airborne.yaml" />
         <a-asset-item id="yaml-esri" src="assets/esri-airborne.yaml" />
