--- a/examples/airborne/index.html
+++ b/examples/airborne/index.html
@@ -19,7 +19,7 @@
       <a-entity id="terrain" visible="true"
       
       geometry="primitive: plane; buffer: true; width: 20; height: 20; segmentsWidth: 50; segmentsHeight: 50;"
-      material="wireframe: true; displacementScale: 10;"
+      material="wireframe: false; displacementScale: 10;"
 
 
       tangram-terrain="
@@ -27,6 +27,7 @@
         center: 12.722753, 47.170529;
         zoom: 14;
         pxToWorldRatio: 50;
+        lodCount: 4;
         lod: 1;
       " 
 
