--- a/examples/index.html
+++ b/examples/index.html
@@ -24,10 +24,10 @@
     <h1>A-Frame Tangram Terrain Component</h1>
     <a href="basic/">Basic</a>
     <p>This is a basic wireframe elevation colored terrain with height points.</p>
-    <a href="airborne/">Airborne Imaginery</a>
+    <a href="airborne/">Airborne Imaginery with LOD</a>
     <p>This is a custom styled map using airborne imaginary. Uses dynamic Level-Of-Detail (LOD) depending on your distance to the terrain.</p>
-    <a href="tiles/">Terrain Tiles</a>
-    <p>Fly over Austria's alps (Using a very simple lazy-loading tile implementation...).</p>
+    <a href="tiles/">Terrain quad-tree LOD Tiles</a>
+    <p>Fly over Austria's alps using a simple quad-tree LOD tile implementation</p>
 
     <!-- GitHub Corner. -->
     <a href="https://github.com/mattrei/aframe-tangram-terrain-component" class="github-corner">
