--- a/examples/index.html
+++ b/examples/index.html
@@ -26,7 +26,7 @@
     <p>This is a basic wireframe elevation colored terrain with height points.</p>
     <a href="airborne/">Airborne Imaginery with LOD</a>
     <p>This is a custom styled map using airborne imaginary. Uses dynamic Level-Of-Detail (LOD) depending on your distance to the terrain.</p>
-    <a href="tiles/">Terrain quad-tree LOD Tiles</a>
+    <a href="tiles/">WIP! - Terrain quad-tree LOD Tiles</a>
     <p>Fly over Austria's alps using a simple quad-tree LOD tile implementation</p>
 
     <!-- GitHub Corner. -->
