--- a/examples/index.html
+++ b/examples/index.html
@@ -24,10 +24,10 @@
     <h1>A-Frame Tangram Terrain Component</h1>
     <a href="basic/">Basic</a>
     <p>This is a basic wireframe elevation colored terrain with height points.</p>
-    <a href="lod/">LOD (Level-Of-Detail) with Airborne Imaginery </a>
-    <p>This is a custom styled map using airborne imaginary. Uses dynamic Level-Of-Detail (LOD) depending on your distance to the terrain.</p>
+    <a href="lod/">LOD (Level-Of-Detail) geometry with Airborne Imaginery </a>
+    <p>This is a custom styled map using airborne imaginary. Uses fast Level-Of-Detail (LOD) on the geometry shader depending on your distance to the terrain.</p>
     <a href="lights/">Lightning the terrain with vertex normals </a>
-    <p>Vertex normals are enabled on this terrain with a moving sun sky shader.</p>
+    <p>Normal maps are enabled on this terrain with a cycling GPU heavy sun sky shader. </p>
     <a href="panning/">Panning a terrain</a>
     <p>Be aware of displacement wobbling.</p>
     <a href="tiles/">WIP! - Terrain quad-tree LOD Tiles</a>
