--- a/examples/basic/index.html
+++ b/examples/basic/index.html
@@ -27,7 +27,7 @@
     geometry="width: 40; height: 40; 
     segmentsWidth: 80; segmentsHeight: 80; 
     primitive: plane;" 
-    material="side: double; wireframe: true; 
+    material="side: double; wireframe: true;
     displacementScale: 30; displacementBias: 0;"
       tangram-terrain="
       apiKey: UJcQwnnfQnWcPtKe2aYaEw;
@@ -36,7 +36,8 @@
   zoom: 10;
   pxToWorldRatio: 15;
   depthBuffer: true;
-  " rotation="-90 0 0" position="0 -25 0"
+  vertexNormals: true;
+  " rotation="-90 0 0" position="0 -10 0"
   sphere-matrix>
 
       <a-sphere id="marker" color="red" position="0 0 0" visible="true" radius="0.1"></a-sphere>
