--- a/examples/basic/index.html
+++ b/examples/basic/index.html
@@ -39,9 +39,9 @@
   " rotation="-90 0 0" position="0 -10 0"
   sphere-matrix>
 
-      <a-sphere id="marker" color="red" position="0 0 0" visible="true" radius="0.1"></a-sphere>
-      <a-sphere id="marker2" color="red" position="0 0 0" visible="true" radius="0.1"></a-sphere>
-      <a-sphere id="marker3" color="red" position="0 0 0" visible="true" radius="0.1"></a-sphere>
+      <a-sphere id="marker"  color="red" radius="0.1"></a-sphere>
+      <a-sphere id="marker2" color="red" radius="0.1"></a-sphere>
+      <a-sphere id="marker3" color="red" radius="0.1"></a-sphere>
     </a-entity>
 
 
