--- a/examples/static/index.html
+++ b/examples/static/index.html
@@ -41,6 +41,9 @@
       position="0 -15 -10"
       >
 
+      <a-sphere id="marker"  color="red" radius="0.2"></a-sphere>
+      <a-sphere id="marker2" color="red" radius="0.2"></a-sphere>
+      <a-sphere id="marker3" color="red" radius="0.2"></a-sphere>
 
       </a-entity>
 
@@ -49,4 +52,18 @@
     </a-scene>
       
   </body>
+
+  <script>
+  var mapEl = document.querySelector('#terrain');
+  var markerEl = document.querySelector('#marker');
+  var marker2El = document.querySelector('#marker2');
+  var marker3El = document.querySelector('#marker3');
+  var setProperty = window.AFRAME.utils.entity.setComponentProperty;
+  mapEl.addEventListener('tangram-terrain-loaded', function () {
+    //12.687492370605469, lng: 47.18805873684999} // center of map
+    setProperty(markerEl, 'position', mapEl.components["tangram-static-terrain"].project(12.6875, 47.188));
+    setProperty(marker2El, 'position', mapEl.components["tangram-static-terrain"].project(12.65, 47.20));
+    setProperty(marker3El, 'position', mapEl.components["tangram-static-terrain"].project(12.691, 47.172));
+  });
+</script>
 </html>
