--- a/examples/basic/index.html
+++ b/examples/basic/index.html
@@ -35,6 +35,7 @@
   center: 15.8056, 47.7671;
   zoom: 10;
   pxToWorldRatio: 15;
+  vertexNormals: false;
   " rotation="-90 0 0" position="0 -10 0"
   sphere-matrix>
 
