--- a/examples/static/index.html
+++ b/examples/static/index.html
@@ -2,9 +2,8 @@
   <head>
     <title>A-Frame Tangram Terrain Component - LOD</title>
     <meta name="description" content="Static example for Tangram component."></meta>
-
-    <script src="../build.js"></script>
-
+    <script src="https://aframe.io/releases/0.8.2/aframe.min.js"></script>
+    <script src="../../dist/aframe-tangram-terrain-component.min.js"></script>
   </head>
   <body>
     <a-scene statss>
