--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
   </head>
   <body>
     <h1>A-Frame Tangram Terrain Component</h1>
-    <a href="basic/">Basic</a>
+    <a href="examples/basic/">Basic</a>
     <p>This is a basic wireframe elevation colored terrain with height points.</p>
-    <a href="lod/">LOD (Level-Of-Detail) geometry with Airborne Imaginery </a>
+    <a href="examples/lod/">LOD (Level-Of-Detail) geometry with Airborne Imaginery </a>
     <p>This is a custom styled map using airborne imaginary. Uses fast Level-Of-Detail (LOD) on the geometry shader depending on your distance to the terrain.</p>
-    <a href="lights/">Lightning the terrain with vertex normals </a>
+    <a href="examples/lights/">Lightning the terrain with vertex normals </a>
     <p>Normal maps are enabled on this terrain with a cycling GPU heavy sun sky shader. </p>
-    <a href="panning/">Panning a terrain</a>
+    <a href="examples/panning/">Panning a terrain</a>
     <p>Be aware of displacement wobbling.</p>
-    <a href="tiles/">WIP! - Terrain quad-tree LOD Tiles</a>
+    <a href="examples/tiles/">WIP! - Terrain quad-tree LOD Tiles</a>
     <p>Fly over Austria's alps using a simple quad-tree LOD tile implementation</p>
 
     <!-- GitHub Corner. -->
