--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
     <p>This is a custom styled map using airborne imaginary. Uses fast Level-Of-Detail (LOD) on the geometry shader depending on your distance to the terrain.</p>
     <a href="examples/lights/">Lightning the terrain with vertex normals </a>
     <p>Normal maps are enabled on this terrain with a cycling GPU heavy sun sky shader. </p>
+    <a href="examples/static/">Terrain with local basemap assets</a>
+    <p>So you do not need to rely on a distant tile server. </p>
     <a href="examples/panning/">Panning a terrain</a>
     <p>Be aware of displacement wobbling.</p>
     <a href="examples/tiles/">WIP! - Terrain quad-tree LOD Tiles</a>
