--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
     <p>So you do not need to rely on a distant tile server. </p>
     <a href="examples/panning/">Panning a terrain</a>
     <p>Be aware of displacement wobbling.</p>
-    <a href="examples/tiles/">WIP! - Terrain quad-tree LOD Tiles</a>
+<!--    <a href="examples/tiles/">WIP! - Terrain quad-tree LOD Tiles</a>
     <p>Fly over Austria's alps using a simple quad-tree LOD tile implementation</p>
+-->
 
     <!-- GitHub Corner. -->
     <a href="https://github.com/mattrei/aframe-tangram-terrain-component" class="github-corner">
