--- a/examples/tiles/index.html
+++ b/examples/tiles/index.html
@@ -3,7 +3,8 @@
     <title>A-Frame Tangram Terrain Component - Tiles</title>
     <meta name="description" content="Tiles example for Tangram component."></meta>
 
-    <script src="../build.js"></script>
+    <script src="https://aframe.io/releases/0.8.2/aframe.min.js"></script>
+    <script src="../../dist/aframe-tangram-terrain-component.min.js"></script>
     <script src="./tiles.js"></script>
   </head>
   <body>
